objects/Joint_Business_Plan_Actions__c.object
<CustomObject>
    <description>R5 - Joint Business Plan Actions</description>
    <fields>
        <fullName>ABB_Responsible_Manager_Email__c</fullName>
        <description>R6: To store the ABB Responsible Manager Email. It will be used in Email Alert. This field will be populated using Workflow</description>
        <label>ABB Responsible Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ABB_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 -ABB Responsible</description>
        <inlineHelpText>ABB person responsible to execute, support and/or follow-up this action</inlineHelpText>
        <label>ABB Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Plan_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Joint_Business_Plan__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Description__c</fullName>
        <description>R5 - Action Description</description>
        <inlineHelpText>It is a good practice to add 2-4 sentences to describe the details of the action. The description can be updated later if necessary</inlineHelpText>
        <label>Action Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>R5 - Actual End Date</description>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments1__c</fullName>
        <description>It is created for X-Author Temple</description>
        <inlineHelpText>Description on status etc. on the level practical</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Comments</description>
        <inlineHelpText>Additional description relative to action status, progress, etc.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <description>R5 - Deadline</description>
        <inlineHelpText>Targeted due date for the action. Can be updated as mutually agreed.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>Joint_Business_Plan__r.External_User__c</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filled_fields_count1__c</fullName>
        <description>R6</description>
        <label>Filled fields count1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_ABB_Responsible_person_Logged_in__c</fullName>
        <formula>IF ($User.Id == ABB_Responsible__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is ABB Responsible person Logged in?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 - Master-Detail Relationship to Joint Business Plan</description>
        <inlineHelpText>Business plan this market scope is connected to</inlineHelpText>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Joint_Business_Plan_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Formatted__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Formatted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late__c</fullName>
        <formula>IF (Deadline__c &lt; Today(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Development_Fund_Action__c</fullName>
        <description>R5 - Market Development Fund Action</description>
        <inlineHelpText>Select Yes in case this action is defined as part of market development fund. (Not available in all businesses and/ or all countries)</inlineHelpText>
        <label>Market Development Fund Action</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Org_Base_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 -. Partner Responsible</description>
        <inlineHelpText>Partner responsible to execute, support and/or follow-up this action</inlineHelpText>
        <label>Partner Responsible</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Joint_Business_Plan_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Joint_Business_Plan__r.Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>R5 - Priority</description>
        <inlineHelpText>Choose priority of this action compared to other actions. Helps allocating resources.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>R5 -Registered</description>
        <inlineHelpText>The date this action was originally registered into the tool</inlineHelpText>
        <label>Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>&quot;On Hold&quot; - action is parked (Specify why under &quot;Comments&quot; section); &quot;Completed&quot; - action completed; &quot;Cancelled&quot; - Specify why under &quot;Comments&quot; section</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Sales = Sales actions focusing on a specific customer; Marketing and Promotion= Campaigns, preparation of sales support material, specifictions and homologation et; Events=Trade fairs, road shows, technical lunches or other events arranged or attended in</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing and Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Actions__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Completeness__c</fullName>
        <description>R6: To calculate % of completeness by number of  filled fields and total editable fields</description>
        <formula>IF (Filled_fields_count1__c == 0, 0, Filled_fields_count1__c / ( VALUE($Label.Sys_Total_Fields_in_Action) ))</formula>
        <label>% of Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Joint_Business_Plan__c</columns>
        <columns>Status__c</columns>
        <columns>ABB_Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Focused_sales</fullName>
        <active>true</active>
        <description>Sales actions focusing on a specific customer</description>
        <label>1.Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_sales</fullName>
        <active>true</active>
        <description>Campaigns, preparation of sales support material, specifictions and homologation etc.</description>
        <label>2. Marketing and Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <description>Trade fairs, road shows, technical lunches or other events arranged or attended in relation to ABB offering</description>
        <label>3. Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Any other type of Actions</description>
        <label>5. Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>Action related to training,personal authorization or company authorization or company audit</description>
        <label>4. Training &amp; Authorization</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ActualEndDategreaterthan_Registered_Date</fullName>
        <active>true</active>
        <description>R5 Actual End Date greater than registered date</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), Actual_End_Date__c &lt; Registered__c)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date must be greater than Registered Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deadline_greater_than_Registered_Date</fullName>
        <active>true</active>
        <description>R5 - Deadline must be always greater than Registered Date.</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), Deadline__c  &lt;  Registered__c)</errorConditionFormula>
        <errorDisplayField>Deadline__c</errorDisplayField>
        <errorMessage>Deadline must be greater than Registered Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JBP_Status_Closed_Check_Actions</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Business Plan Status is Closed/Obsolete, then the user should not edit the Action record</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), OR(ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Closed&apos;), 
ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Obsolete&apos;) 
))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed/Obsolete</errorMessage>
    </validationRules>
</CustomObject>